# blackfish

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  justfile  latest  mkdocs.yml  mypy.ini  noxfile.py  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  versions.json
.claude/: settings.json
.claude/commands/: build.md  lint.md  migrate.md  new-service.md  pr-checklist.md  pr-review.md  pr.md  project-setup.md  release-checklist.md  test-lib.md  test-web.md
.claude/hooks/: protect-branches.sh
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  lib.yml  release.yml  web.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/admin/: index.html
0.1.0/develop/: index.html
0.1.0/getting_started/: index.html
admin/: index.html
api/jobs/: index.html
api/services/: index.html
api/swagger/: index.html  swagger-dd5dbf7f.html
contrib/: index.html
deploy/dev/: Dockerfile
deploy/prod/: Dockerfile
develop/: index.html
docs/: admin.md  contrib.md  getting_started.md  index.md  issues.md
docs/api/: services.md  swagger.html  swagger.json  usage.md
docs/setup/: management.md
getting_started/: index.html
lib/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  mkdocs.yml  pyproject.toml
lib/docs/: index.md
lib/docs/api/: jobs.md  services.md
lib/docs/contrib/: developer_guide.md  guidelines.md
lib/docs/setup/: installation.md  management.md
lib/docs/usage/: cli.md  client.md  ui.md
lib/src/blackfish/: __init__.py  client.py  service.py  utils.py
lib/src/blackfish/cli/: __main__.py  api.py  batch.py  image.py  profile.py
lib/src/blackfish/cli/jobs/: speech_recognition.py
lib/src/blackfish/cli/services/: speech_recognition.py  text_generation.py
lib/src/blackfish/server/: asgi.py  bootstrap.py  browser.py  cluster.py  config.py  http_client.py  images.py  job.py  logger.py  migrations.py  remote.py  remote_files.py  setup.py  sftp.py  utils.py
lib/src/blackfish/server/db/: __init__.py
lib/src/blackfish/server/db/migrations/: env.py
lib/src/blackfish/server/db/migrations/versions/: 2026-02-10_tigerflow_batch_jobs_a1b2c3d4e5f6.py  2026-02-11_add_file_extensions_b2c3d4e5f6a7.py  2026-02-14_add_download_task_table_f4fb4d42a827.py  2026-02-14_add_model_metadata_e5df678f18d4.py  2026-04-16_add_idle_timeout_to_jobs_1cca2a04c7bb.py  2026-04-16_add_idle_timeout_to_jobs_c4d5e6f7a8b9.py  2026-07-01_add_batch_restart_columns_c3d4e5f6a7b8.py  2026-07-23_normalize_model_dir_to_repo_root_565bd6201d2a.py
lib/src/blackfish/server/jobs/: __init__.py  base.py  client.py  speech_recognition.py  tasks.py
lib/src/blackfish/server/models/: download.py  metadata.py  model.py  profile.py  tiers.py
lib/src/blackfish/server/remote/: __init__.py  session.py
lib/src/blackfish/server/services/: base.py  speech_recognition.py  text_generation.py
lib/src/blackfish/server/templates/: base_slurm.sh  batch_local.sh  batch_slurm.sh  speech_recognition_local.sh  speech_recognition_slurm.sh  text_generation_local.sh  text_generation_slurm.sh
lib/tests/: conftest.py  data_fixtures.py  profiles.cfg
lib/tests/api/: conftest.py  test_audio.py  test_auth.py  test_browser.py  test_cluster.py  test_jobs.py  test_models.py  test_no_auth_token.py  test_profiles.py  test_remote_files_api.py  test_resources.py  test_services.py  test_sftp_api.py  test_texts.py  test_utils.py
lib/tests/cli/: conftest.py  test_api.py  test_cli_connection_errors.py  test_cli_images.py  test_cli_models.py  test_cli_profiles.py  test_cli_run.py  test_cli_start.py  test_cli_stop.py
lib/tests/contract/: __init__.py  test_tigerflow.py
lib/tests/dev/cli/: test_jobs.py
lib/tests/integration/: test_migrations.py  test_models.py
lib/tests/unit/: test_api.py  test_app_bootstrap.py  test_client.py  test_cluster.py  test_config_images.py  test_http_client.py  test_images.py  test_job.py  test_jobs.py  test_metadata.py  test_migrations.py  test_model.py  test_remote.py  test_remote_files.py  test_services.py  test_setup.py  test_sftp.py  test_sqlite_pragmas.py  test_templates.py  test_tiers.py  test_utils.py
pr-preview/: versions.json
pr-preview/pr-100/: 404.html  index.html  sitemap.xml
pr-preview/pr-102/: 404.html  index.html  sitemap.xml
pr-preview/pr-109/: 404.html  index.html  sitemap.xml
pr-preview/pr-114/: 404.html  index.html  sitemap.xml
pr-preview/pr-119/: 404.html  index.html  sitemap.xml
pr-preview/pr-123/: 404.html  index.html  sitemap.xml
pr-preview/pr-124/: 404.html  index.html  objects.inv  sitemap.xml
pr-preview/pr-131/: 404.html  index.html  sitemap.xml
pr-preview/pr-133/: 404.html  index.html  sitemap.xml
pr-preview/pr-137/: 404.html  index.html  sitemap.xml
pr-preview/pr-138/: 404.html  index.html  sitemap.xml
pr-preview/pr-139/: 404.html  index.html  (+1 more)
search/: search_index.json
tests/: conftest.py  test_auth.py  test_hf_integration.py  test_job.py  test_setup.py  test_utils.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0-alpha/: 404.html  index.html  sitemap.xml
v0.1.1/: 404.html  index.html  sitemap.xml
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.0/: 404.html  index.html  sitemap.xml
v0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.1/: 404.html  index.html  sitemap.xml
v0.5.0/: 404.html  index.html  sitemap.xml
v0.5.1/: 404.html  index.html  sitemap.xml
v0.5.2/: 404.html  index.html  sitemap.xml
v1.0.0a0/: 404.html  index.html  sitemap.xml
v1.0.0a1/: 404.html  index.html  sitemap.xml
v1.0.0a2/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.0a3/: 404.html  index.html  sitemap.xml
v1.0.0a4/: 404.html  index.html  sitemap.xml
v1.0.0a5/: 404.html  index.html  sitemap.xml
v1.0.0a6/: 404.html  index.html  sitemap.xml
v1.0.0b1/: 404.html  index.html  sitemap.xml
web/: .dockerignore  .gitignore  .nvmrc  CLAUDE.md  Dockerfile  README.md  eslint.config.mjs  index.html  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
(+1424 files in other folders)
