[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[project]
name = "blackfish"
version = "0.1.0"
description = "An open-source MLaaS platform."
readme = "README.md"
license = "MIT"
authors = [{ name = "Colin Swaney" }, { email = "colinswaney@princeton.edu" }]
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "advanced-alchemy<1,>=0.8.4",
  "aiosqlite",
  "alembic<2,>=1.13.1",
  "click",
  "colorlog",
  "fabric",
  "huggingface_hub<1,>=0.25",
  "jinja2<4,>=3.1.3",
  "litestar~=2.11",
  "log_symbols",
  "prettytable<4,>=3.10",
  "psutil<6,>5.9",
  "requests<3,>=2.31",
  "tqdm<5,>=4.66.4",
  "uvicorn",
  "yaspin==3.0.2",
  # dev
  "nox",
  "pre-commit",
  # test
  "pytest",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings[python]",
  "mkdocs-swagger-ui-tag",
]
[project.scripts]
blackfish = "app.cli.__main__:main"

[tool.mypy]
files = "blackfish"
python_version = "3.10"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "celery.*",
  "click.*",
  "colorlog.*",
  "prettytable.*",
  "pydantic.*",
  "tasks.*",
]
ignore_missing_imports = true
