[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "blackfish-ai"
version = "1.0.0b1"
description = "An open-source AI-as-a-Service platform."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Colin Swaney", email = "colinswaney@princeton.edu" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "advanced-alchemy>=1.11,<2",
  "aiosqlite>=0.21,<0.22",
  "alembic>=1.14,<2",
  "colorlog>=6.9,<7",
  "fabric>=3.2.2,<4",
  "httpx>=0.28,<1",
  "huggingface-hub>=1.4.1,<2",
  "jinja2>=3.1.5,<4",
  "litestar>=2.16,<3",
  "log-symbols>=0.0.14,<0.1",
  "pillow>=12,<13",
  "prettytable>=3.12,<4",
  "psutil>=7.1.3,<8",
  "pydantic>=2.10.6,<3",
  "python-dotenv>=1.2.1,<2",
  "requests>=2.32.3,<3",
  "rich-click>=1.8.9,<2",
  "types-paramiko>=4.0.0.20250822,<5",
  "types-psutil>=7.1.3.20251202,<8",
  "types-pyyaml>=6.0.12,<7",
  "types-requests>=2.32.0.20241016,<3",
  "uvicorn>=0.38,<0.39",
  "websockets>=16,<17",
  "yaspin>=3.1,<4",
]
optional-dependencies.uv = [
  "uv>=0.5.18",
]
urls.bug-tracker = "https://github.com/princeton-ddss/blackfish/issues"
urls.documentation = "https://princeton-ddss.github.io/blackfish/"
scripts.blackfish = "blackfish.cli.__main__:main"

[dependency-groups]
dev = [
  "anyio>=4.9",
  "coverage>=7.9.2",
  "coverage-badge>=1.1.2",
  "ipython>=9.0.2",
  "mike>=2.1.3",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.2",
  "mkdocs-swagger-ui-tag>=0.6.11",
  "mkdocstrings[python]>=0.28",
  "mypy>=1.19.1",
  "pre-commit>=4.2",
  "pytest>=8.3.4",
  "pytest-cov>=6.2.1",
  "rust-just>=1.44",
  "sniffio>=1.3.1",
  "types-pyyaml>=6.0.12",
]
contract = [
  "tigerflow @ git+https://github.com/princeton-ddss/tigerflow.git@v0.3.0",
  "tigerflow-ml @ git+https://github.com/princeton-ddss/tigerflow-ml.git@v0.1.0a1",
]

[tool.hatch]
build.artifacts = [ "src/blackfish/build/**" ]
build.targets.wheel.packages = [ "src/blackfish" ]

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"
warn_unreachable = true
strict = true
show_error_codes = true

[tool.coverage]
run.omit = [
  "src/blackfish/server/db/migrations/*",
]
